fix video width on small screens

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -107,7 +107,7 @@ header {
 
 @media screen and (max-width: 720px) {
     #promo-video {
-        width: 370px;
-        height: 208px;
+        width: 350px;
+        height: 197px;
     }
 }
